--- a/template/model_config_template.toml
+++ b/template/model_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.2.1"
+version = "1.2.2"
 
 # 配置文件版本号迭代规则同bot_config.toml
 
@@ -143,6 +143,11 @@ max_tokens = 800
 model_list = ["qwen2.5-vl-72b"]
 max_tokens = 800
 
+[model_task_config.video_analysis] # 专用视频分析模型
+model_list = ["qwen2.5-vl-72b"]
+temperature = 0.3
+max_tokens = 1500
+
 [model_task_config.voice] # 语音识别模型
 model_list = ["sensevoice-small"]
 
@@ -159,6 +164,8 @@ max_tokens = 1000
 #嵌入模型
 [model_task_config.embedding]
 model_list = ["bge-m3"]
+
+
 
 #------------LPMM知识库模型------------
 
