--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "6.3.3"
+version = "6.3.4"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -123,6 +123,17 @@ talk_frequency_adjust = [
 
 # 全局配置示例：
 # [["", "8:00,1", "12:00,2", "18:00,1.5", "00:00,0.5"]]
+
+# 主动思考功能配置（仅在focus模式下生效）
+enable_proactive_thinking = false # 是否启用主动思考功能
+proactive_thinking_interval = 1500 # 主动思考触发间隔时间（秒），默认1500秒（25分钟）
+# 主动思考prompt模板，{time}会被替换为实际的沉默时间（如"2小时30分15秒"）
+proactive_thinking_prompt_template = """现在群里面已经隔了{time}没有人发送消息了，请你结合上下文以及群聊里面之前聊过的话题和你的人设来决定要不要主动发送消息，你可以选择：
+
+1. 继续保持沉默（当{time}以前已经结束了一个话题并且你不想挑起新话题时）
+2. 选择回复（当{time}以前你发送了一条消息且没有人回复你时、你想主动挑起一个话题时）
+
+请根据当前情况做出选择。如果选择回复，请直接发送你想说的内容；如果选择保持沉默，请回复"沉默"。"""
 
 # 特定聊天流配置示例：
 # [
