--- a/template/model_config_template.toml
+++ b/template/model_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.2.2"
+version = "1.2.3"
 
 # 配置文件版本号迭代规则同bot_config.toml
 
@@ -143,6 +143,11 @@ max_tokens = 800
 [model_task_config.vlm] # 图像识别模型
 model_list = ["qwen2.5-vl-72b"]
 max_tokens = 800
+
+[model_task_config.emoji_vlm] # 专用表情包识别模型
+model_list = ["qwen2.5-vl-72b"]
+max_tokens = 800
+
 
 [model_task_config.utils_video] # 专用视频分析模型
 model_list = ["qwen2.5-vl-72b"]
