--- a/src/plugins/built_in/maizone_refactored/_manifest.json
+++ b/src/plugins/built_in/maizone_refactored/_manifest.json
@@ -4,17 +4,14 @@
   "version": "3.0.0",
   "description": "（重构版）让你的麦麦发QQ空间说说、评论、点赞，支持AI配图、定时发送和自动监控功能",
   "author": {
-    "name": "MaiBot-Plus",
-    "url": "https://github.com/MaiBot-Plus"
+    "name": "MoFox-Studio",
+    "url": "https://github.com/MoFox-Studio"
   },
-  "license": "AGPL-v3.0",
+  "license": "GPL-v3.0",
   
   "host_application": {
-    "min_version": "0.8.0",
-    "max_version": "0.11.0"
+    "min_version": "0.10.0"
   },
-  "homepage_url": "https://github.com/MaiBot-Plus/MaiMbot-Pro-Max",
-  "repository_url": "https://github.com/MaiBot-Plus/MaiMbot-Pro-Max",
   "keywords": ["QQ空间", "说说", "动态", "评论", "点赞", "自动化", "AI配图"],
   "categories": ["社交", "自动化", "QQ空间"],
   
